# MoveG

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_8txt.html  Makefile  MoveG__Lib_2CMakeLists_8txt.html  README.md  README_8md.html  README_install.md  README_tools.md  annotated.html  annotated_dup.js  appoggio_8cpp.html  appoggio_8cpp.js  appoggio_8cpp_source.html  classMoveG_1_1Pose-members.html  classMoveG_1_1Pose.html  classMoveG_1_1Pose.js  classMoveG_1_1Pose__coll__graph.dot  classMoveG_1_1Pose_a0db347bb69d0b17dbf460f8dc28d92d3_icgraph.dot  classMoveG_1_1Pose_a128a8a054737251dd8bcea430d2ef46b_icgraph.dot  classMoveG_1_1Pose_a14cc9d650b261109f730ac62d2c4780b_icgraph.dot  classMoveG_1_1Pose_a259fd204fe731b062ce19c571b8888e7_icgraph.dot  classMoveG_1_1Pose_a29706dbd3cba072d01dfc46f7e939262_icgraph.dot  classMoveG_1_1Pose_a349a94cf14401d7d534a52b6b9b214d3_icgraph.dot  classMoveG_1_1Pose_a36ee71436b5ece0ddd1ccafb4296bb4f_icgraph.dot  classMoveG_1_1Pose_a3a9e69ef5281cafd148528cbb0d48bd0_icgraph.dot  classMoveG_1_1Pose_a3b07e1cbe4773a5b0ac176a740a56343_icgraph.dot  classMoveG_1_1Pose_a3eeff7cb17faae494cf4f214d18e0609_icgraph.dot  classMoveG_1_1Pose_a42e31aa4f1b8959e422bc55d45d0a246_icgraph.dot  classMoveG_1_1Pose_a44b8846c198555f8fc68198af5f25af7_icgraph.dot  classMoveG_1_1Pose_a48760c189e18845d0caf3f16fdd84813_icgraph.dot  classMoveG_1_1Pose_a4dc4b3dbd154a8c9bd2815d0af9a972e_icgraph.dot  classMoveG_1_1Pose_a56f1ba02596849211ab1165cdfb13e3b_icgraph.dot  classMoveG_1_1Pose_a7aa4a2212ddc0a8691219b706123bf9b_icgraph.dot  classMoveG_1_1Pose_a7bb41d491494b7e23b5a1c31a2494500_icgraph.dot  classMoveG_1_1Pose_a7f088d32bb567d8b895fb89d96f1fdef_cgraph.dot  classMoveG_1_1Pose_a7f088d32bb567d8b895fb89d96f1fdef_icgraph.dot  classMoveG_1_1Pose_a99b2bef46f6f401d3751e3ab528fe093_cgraph.dot  (+124 more)
.github/workflows/: codeql.yml  documentation.yml  ubuntu.yml
app/: CMakeLists.txt  main.cc  main.cpp  pose_example.cpp  rotation_example.cpp
cmake/: CPM.cmake  CodeCoverage.cmake  Docs.cmake  Tools.cmake  Warnings.cmake
configured/: config.hpp.in
docs/: Doxyfile  mainpage.md
docs/examples/: pose_example.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+14 more)
src/: CMakeLists.txt
src/MoveG_Lib/: CMakeLists.txt  MoveG_Lib.h  README.md  appoggio.cpp  pose_lib.cpp  pose_lib.h  rotation_lib.cpp  rotation_lib.h  traj_lib.cpp  traj_lib.h
src/MoveG_Lib/pose/: pose_lib.cpp  rotation_lib.h
src/MoveG_Lib/trajectory/: geometric_path.cpp  geometric_path.h  motion_law.cpp  motion_law.h  traj_lib.h  trajectory.cpp  trajectory.h  waypoint.cpp  waypoint.h
src/bar/: CMakeLists.txt
src/foo/: CMakeLists.txt  foo.cc
tests/: CMakeLists.txt  pose_example.cpp  test_Pose.cpp  test_Rotation.cpp
